--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <div class="assignment-card">
                 <span class="status complete">Complete</span>
                 <h3>Week 4</h3>
-                <p>Data Structures & Algorithms</p>
-                <a href="https://drive.google.com/drive/folders/1MauPH-Dk9ia04Dddz0aQDChNJE6kLzsB?usp=drive_link" class="button" target="_blank">View Assignment</a>
+                <p>Virtual Library & Idea Sourcing</p>
+                <a href="csv.visualizer.html" class="button">View Assignment</a>
             </div>
             
             <div class="assignment-card">
