--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             gradesDisplay.textContent = 'Loading grades...';
             
             // Replace with your web app URL
-            fetch('YOUR_WEB_APP_URL')
+            fetch('https://script.google.com/macros/s/AKfycbzPlsfdYuWLU2D5WvcZEagRgmwRZ-d-AXrJhso5JFP3w0bMipFapq9rHygMXjEp7HDDgw/exec')
                 .then(response => response.json())
                 .then(data => {
                     // Update the display
