--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <span class="status complete">Complete</span>
                 <h3>Week 7</h3>
                 <p>AppScript Assignment</p>
-                <div class="assignment-link" onclick="window.open('https://docs.google.com/document/d/1IFtxR_VVfFE28KEVIKxi-hwdmHpMGdCuUPFdnQ8qarA/edit?usp=sharing', '_blank')">
+                <div class="assignment-link" onclick="window.location.href='Week_7.html'">
                     View Assignment
                 </div>
             </div>
