--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <span class="status complete">Complete</span>
                 <h3>Week 7</h3>
                 <p>AppScript Assignment</p>
-                <div class="assignment-link" onclick="window.location.href='Week_7.html'">
+                <div class="assignment-link" onclick="window.location.href='week.7.html'">
                     View Assignment
                 </div>
             </div>
