--- a/index.html
+++ b/index.html
@@ -256,13 +256,18 @@
             </div>
             
             <div class="assignment-card">
-                <span class="status complete">Complete</span>
-                <h3>Week 6 - Project</h3>
-                <p>Crypto Project</p>
-                <div class="assignment-link" style="background-color: #ccc; cursor: not-allowed;">
-                    Coming Soon
-                </div>
-            </div>
+    <span class="status complete">Complete</span>
+    <h3>Week 6 - Project</h3>
+    <p>Cryptography Tool Development</p>
+    <div style="display: flex; flex-direction: column; gap: 10px; margin-top: 15px;">
+        <a href="https://behruz1262.github.io/encryption-decryption-tool" class="button" target="_blank" style="text-align: center;">
+            Crypto Tool
+        </a>
+        <a href="week6.html" class="button" style="text-align: center;">
+            Documentation
+        </a>
+    </div>
+</div>
             
             <div class="assignment-card">
                 <span class="status complete">Complete</span>
