--- a/grades.html
+++ b/grades.html
@@ -96,7 +96,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            fetch('YOUR_SCRIPT_URL')
+            fetch('https://script.google.com/macros/s/AKfycbzvdg-R3xWVStLYX3qHaCPgHgZk_dBPNCtKmDBvzGUASmwGP2X_q9Cu8jRyATzbvrA/exec')
                 .then(response => response.json())
                 .then(data => {
                     if (data.success) {
