--- a/grades.html
+++ b/grades.html
@@ -77,7 +77,7 @@
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        fetch('YOUR_GOOGLE_SCRIPT_URL')
+        fetch('https://script.google.com/macros/s/AKfycbwohO7Gp7CI4gD2g-mQznXIJuF8543fK4ks6DtV5kvKV2X_3It2rzu4Qf0ctX1VlnNNew/exec')
             .then(response => response.json())
             .then(data => {
                 const container = document.getElementById('grades-container');
