--- a/index.html
+++ b/index.html
@@ -250,7 +250,20 @@
             </div>
         </div>
     </div>
+<!-- [Existing Week 7 card...] -->
 
+<!-- Add Week 10 card here -->
+<div class="assignment-card">
+    <span class="status complete">Complete</span>
+    <h3>Week 10</h3>
+    <p>Advanced Concepts Final Project</p>
+    <div class="assignment-link" onclick="window.open('https://chatgpt.com/share/6825b014-5a10-800e-9039-8620d7b1a53d', '_blank')">
+        View Assignment
+    </div>
+</div>
+
+</div> <!-- This is the closing tag of assignments-container -->
+    
     <footer>
         &copy; 2025 Abbos Muminov - Dong-A University
     </footer>
