--- a/index.html
+++ b/index.html
@@ -305,18 +305,16 @@
                 </a>
             </div>
             
-            <!-- New Project 2 -->
+            <!-- Project 2 with single button -->
             <div class="assignment-card">
                 <span class="project-badge">NEW</span>
                 <span class="status complete">Complete</span>
                 <h3>Project 2</h3>
                 <p>Advanced Data Visualization Dashboard</p>
+                <!-- Single button container -->
                 <div>
                     <a href="project2.html" class="button">
-                        Project Documentation
-                    </a>
-                    <a href="https://github.com/abbos/project2" class="button" target="_blank">
-                        GitHub Repository
+                        View Project Documentation
                     </a>
                 </div>
             </div>
